--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300&family=Imbue:opsz,wght@10..100,400;10..100,700;10..100,800&family=Inria+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300&family=Libre+Baskerville&family=Roboto+Serif:opsz,wght@8..144,100;8..144,400&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Weather Dashboard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
